# warm-start-rl

./: .gitignore  README.md  pyproject.toml  run_scaling.sh
configs/: pretraining_experiment.yaml  pretraining_experiment_double.yaml  pretraining_experiment_half.yaml  pretraining_experiment_template.yaml  pretraining_quick.yaml
configs/model_sizes/: model_size_1x.yaml  model_size_double.yaml  model_size_half.yaml
reports/: 1x_draw_rate_raw.csv  1x_episodes_to_target.csv  2x_draw_rate_raw.csv  2x_episodes_to_target.csv  build_figure_data.py  c4_scaling_paper.tex  compute_log_quadratic_fits.py  episode_accuracy_summary.csv  generate_warm_start_plots.py  half_draw_rate_raw.csv  half_episodes_to_target.csv  log_quadratic_fits.csv  make_figures.R
reports/figures/: warm-start-loss-frontier-data.tex  warm-start-loss-frontier.tex
reports/local_metrics/1x/run_20251018-010750-120492/: episodes_to_target_summary.csv  minimax_history_summary.csv
reports/local_metrics/1x/run_20251018-010750-120492/pretrain_0_1x/seed_0/: episodes_to_target.csv  minimax_history.csv  (+1 more)
reports/local_metrics/double/run_20251018-011145-404014/: episodes_to_target_summary.csv  minimax_history_summary.csv
reports/local_metrics/half/run_20251018-010018-789293/: episodes_to_target_summary.csv  minimax_history_summary.csv
scripts/: build_tictactoe_dataset.py  evaluate_tictactoe_policy.py  pretrain_tictactoe_supervised.py  run_pretraining_experiments.py  train_tictactoe_ppo.py
src/c4_scaling/: __init__.py  datasets.py  policy_gradient.py  ppo_agent.py  pretraining.py  tictactoe_env.py
(+267 files in other folders)
