[project]
name = "c4-scaling"
version = "0.2.0"
description = "PPO Tic-Tac-Toe experiment managed with uv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "torch>=2.0",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
